# human_tracker

./: CMakeLists.txt  README  README.md  package.xml
.circleci/: config.yaml  config.yml
cmake/: dependencies.cmake  install.cmake
docker/: Dockerfile
human_tracker/: CMakeLists.txt  package.xml
human_tracker/cmake/: dependencies.cmake  setup.cmake
human_tracker/include/htrac/model/: parameterization.hpp  sdf_model.hpp  skinned_mesh.hpp
human_tracker/include/htrac/pose/: dataset.hpp  keypoint_distance_field.hpp  pose_estimation.hpp  pose_from_keypoints.hpp
human_tracker/include/htrac/ros/: openpose_tracker.hpp
human_tracker/include/htrac/util/: matrix4x4.inl  mhx2.hpp  mhx2_importer.hpp  pcl_util.hpp  pose_database.hpp  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp
human_tracker/include/human_tracker/: camera_reader.hpp
human_tracker/src/: CMakeLists.txt
human_tracker/src/datasets/: certh_dataset.cpp
human_tracker/src/modelling/: fit_skeleton.cpp  parameterization.cpp  primitive_mesh.cpp  skeleton.cpp  skinned_mesh.cpp  so3.hpp
human_tracker/src/ros/: camera_reader.cpp  openpose_tracker.cpp  test_camera_reader.cpp
human_tracker/src/tracking/: collision_data.cpp  collision_data.hpp  collision_term.cpp  collision_term_gpu.hpp  context.hpp  context_gpu.hpp  distance_transform.cpp  distance_transform.hpp  energy_term.cpp  image_to_model_term.cpp  image_to_model_term.hpp  image_to_model_term_gpu.cu  joint_limits_term.cpp  joint_limits_term.hpp  keypoints_2d_term.cpp  keypoints_term.hpp  model_fit.cu  model_to_image_term.cpp  model_to_image_term.hpp  model_to_image_term_3d.cpp  model_to_image_term_3d.hpp  model_to_image_term_gpu.cu  pose_estimator_sdf.cpp  sdf_model.cpp
human_tracker/src/tracking/sandbox/: test_fit2.cpp
human_tracker/src/util/: depth_provider.cpp  io_util.cpp  pcl_util.cpp  skeleton.cpp  util.cpp
human_tracker_msgs/: CMakeLists.txt  package.xml
human_tracker_msgs/msg/: Frame.msg  Joint.msg
include/htrac/model/: pose.hpp  primitive_sdf.hpp  skeleton.hpp
include/htrac/pose/: hgpose.hpp  human_detector.hpp  keypoint_detector.hpp  keypoint_detector_openpose.hpp  model_fit.hpp
include/htrac/ros/: camera_reader.hpp
include/htrac/util/: depth_provider.hpp  io_util.hpp  matrix3x3.hpp  matrix3x3.inl  matrix4x4.hpp  mesh.hpp  vector4.inl
src/: CMakeLists.txt
src/datasets/: itop_dataset.cpp
src/modelling/: pose.cpp
src/openpose/: keypoint_detector.cpp  keypoint_detector_openpose.cpp
src/openpose/sandbox/: test_openpose.cpp
src/ros/: camera_reader.cpp  openpose_tracker.cpp  test_camera_reader.cpp
src/tracking/: collision_term.hpp  collision_term_gpu.cu  context.cpp  context_gpu.cu  cuda_util.hpp  energy_term.hpp  image_to_model_term_gpu.cuh  image_to_model_term_gpu.hpp  keypoint_distance_field.cpp  keypoints_2d_term.hpp  keypoints_term.cpp  model_to_image_term_gpu.cuh  model_to_image_term_gpu.hpp  odf.cpp  odf.hpp  pose_from_keypoints.cpp  primitive_sdf_gpu.cu  primitive_sdf_gpu.hpp  solver.hpp
src/tracking/sandbox/: arm_sampler.cpp  test_energy.cpp  test_energy_gpu.cu  test_fit.cpp
src/util/: CMakeLists.txt  mesh.cpp  mhx2_importer.cpp  pose_database.cpp
