<?xml version="1.0"?>
<package format="2">
  <name>ros_human_tracker</name>
  <version>0.0.1</version>
  <description>ROS wrapper for human tracker</description>

  <maintainer email="malasiot@gmail.com">Sotiris Malassiotis</maintainer>
  <author email="malasiot@gmail.com">Sotiris Malassiotis</author>

  <!-- The license tag -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <export>
  </export>
</package>
