<?xml version="1.0"?>
<package format="3">
  <name>ros_human_tracker</name>
  <version>0.0.1</version>
  <description>ROS wrapper for human tracker</description>

  <maintainer email="malasiot@gmail.com">Sotiris Malassiotis</maintainer>
  <author email="malasiot@gmail.com">Sotiris Malassiotis</author>

  <!-- The license tag -->
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

<export>
	<build_type>ament_cmake</build_type>
  </export>
</package>
